para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/35.AMZ
// error
void func() {
	int i = 0;
	while (i < 10) {
		i = i + 1;
		int b = 0;
	}
	b = 10;
	return;
}
